# test_api_gallery

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
src/: manage.py
src/config/: settings.py  urls.py
src/gallery/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
src/gallery/migrations/: 0001_initial.py
src/gallery/services/: image_services.py
src/gallery/tests/: conftest.py  test_db.py  test_views.py
src/users/: admin.py  apps.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/users/management/commands/: create_admin.py
src/users/migrations/: 0001_initial.py
src/users/services/: db_services.py
src/users/tests/: conftest.py  test_db.py  test_views.py
